<resources>
    <string name="app_name">Android_Traffic</string>
    <string name="txtUsername">帳號</string>
    <string name="txtPassword">密碼</string>
    <string name="txtLogin">登入</string>
    <string name="txtRegister">註冊</string>
    <string name="txtForgetPassword"><u>忘記密碼</u></string>
    <string name="txtSendPhoneMsg">送出驗證簡訊</string>
    <string name="txtSend">送出</string>
    <string name="txtConfirm">驗證</string>
    <string name="txtPhone">手機號碼</string>
    <string name="txtConfirmCode">驗證碼</string>
    <string name="txtNext">下一步</string>
    <string name="txtConfrimPassword">確認密碼</string>
    <string name="txtRegisterMember">註冊會員</string>
    <string name="txtName">姓名</string>
    <string name="txtID">身分證字號(帳號)</string>
    <string name="txtBirthday">出生年月日</string>
    <string name="txtWhistleblowerInfo">檢舉人資料</string>
    <string name="txtUploadDoc">檔案上傳</string>
    <string name="txtWhistleblowerContent">檢舉內容</string>
    <string name="txtSendComplete">送出完成</string>
    <string name="txtCheckTask">查詢案件</string>
    <string name="txtCaseNumber">案件編號</string>
    <string name="txtNextCase">繼續檢舉</string>
    <string name="txtCaseNumberConfirm">案件編號:</string>
    <string name="txtPrevious">上一步</string>
    <string name="txtUploadFile">上傳檔案</string>
    <string name="txtAddress">地址</string>
    <string name="txtEmail">電子郵件</string>
    <string name="txtContent">每案上傳總容量限制為 80MB 【至多可上傳 5 個檔案】 如您係以影片檢舉交通違規 請您擷取檢舉之違規片段即可 以避免影片大小過大無法上傳 支援檔案類型： 圖片 jpg,png,bmp,tiff 影片 mov,wmv,avi,mp4,3gp 建議您採用 jpg 與 mp4</string>
    <string name="ViolationFactDetails">違規事實說明</string>
    <string name="ViolationFact">違規事實</string>
    <string name="txtLocationNote">地點備註</string>
    <string name="txtViolationTime">違規時間</string>
    <string name="txtViolationCar">違規車號</string>
    <string name="txtViolationLocation">違規地點</string>
    <string name="txtIntersection">交叉路口</string>
    <string name="txtResetPassword">重設密碼</string>
    <string name="txtBackToMainPage">回首頁</string>
    <string name="errUsernameEmpty">帳號不可空白</string>
    <string name="errPasswordEmpty">密碼不可空白</string>
    <string name="txtNickname">暱稱</string>
    <string name="txtRegisterAddress">地址</string>
    <string name="txtRegisterEmail">Email</string>
    <string name="txtRegisterPhone">手機</string>
    <string name="txtRegisterConfirmCode">驗證碼</string>
    <string name="txtRegisterConfirmMsg">送出驗證簡訊</string>
    <string name="txtRegisterSendConfirmCode">送出驗證碼</string>
    <string name="txtLoginAdministrator">我是管理員</string>
    <string name="txtRegisterResult">註冊資料錯誤提示</string>
    <string-array name="txtArray">
        <item>在交岔路口十公尺內臨時停車</item>
        <item>轉彎或變換車道不依標誌、標線、號誌指示</item>
        <item>汽車駕駛人未依規定使用方向燈</item>
        <item>併排臨時停車</item>

    </string-array>
</resources>