<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.android_traffic.RegisterViewModel" />
    </data>
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="72dp"
                android:text="@string/txtRegisterMember"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtTxtName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/txtName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tvRegister"
            app:layout_constraintStart_toStartOf="@+id/tvRegister"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        <EditText
            android:id="@+id/edtTxtId"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="124dp"
            android:ems="10"
            android:hint="@string/txtID"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tvRegister"
            app:layout_constraintStart_toStartOf="@+id/tvRegister"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        <EditText
            android:id="@+id/edtTxtPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:inputType="none|textPassword"
            app:layout_constraintEnd_toEndOf="@+id/tvRegister"
            app:layout_constraintStart_toStartOf="@+id/tvRegister"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        <EditText
            android:id="@+id/edtTxtId3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="280dp"
            android:ems="10"
            android:hint="@string/txtConfrimPassword"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tvRegister"
            app:layout_constraintStart_toStartOf="@+id/tvRegister"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        <EditText
            android:id="@+id/edtTxtBirthday"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="360dp"
            android:ems="10"
            android:hint="@string/txtBirthday"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tvRegister"
            app:layout_constraintStart_toStartOf="@+id/tvRegister"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

            <EditText
                android:id="@+id/edtTxtNickname"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="440dp"
                android:ems="10"
                android:hint="@string/txtNickname"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvRegister"
                app:layout_constraintStart_toStartOf="@+id/tvRegister"
                app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

            <EditText
                android:id="@+id/edtTxtRegisterAddress"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="512dp"
                android:ems="10"
                android:hint="@string/txtRegisterAddress"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvRegister"
                app:layout_constraintStart_toStartOf="@+id/tvRegister"
                app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

            <EditText
                android:id="@+id/edtTxtRegisterEmail"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="600dp"
                android:ems="10"
                android:hint="@string/txtRegisterEmail"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvRegister"
                app:layout_constraintStart_toStartOf="@+id/tvRegister"
                app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

            <EditText
                android:id="@+id/edtTxtRegisterPhone"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="680dp"
                android:ems="10"
                android:hint="@string/txtRegisterPhone"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvRegister"
                app:layout_constraintStart_toStartOf="@+id/tvRegister"
                app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

            <EditText
                android:id="@+id/edtTxtRegisterConfirmCode"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="780dp"
                android:ems="10"
                android:hint="@string/txtRegisterConfirmCode"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvRegister"
                app:layout_constraintStart_toStartOf="@+id/tvRegister"
                app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

            <Button
                android:id="@+id/btRegisterConfirmMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtRegisterConfirmMsg"
                app:layout_constraintEnd_toEndOf="@+id/edtTxtRegisterPhone"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/edtTxtRegisterPhone"
                app:layout_constraintTop_toBottomOf="@+id/edtTxtRegisterPhone" />

            <Button
                android:id="@+id/btRegisterSendConfirmCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtRegisterSendConfirmCode"
                app:layout_constraintEnd_toEndOf="@+id/edtTxtRegisterConfirmCode"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/edtTxtRegisterConfirmCode"
                app:layout_constraintTop_toBottomOf="@+id/edtTxtRegisterConfirmCode" />

            <Button
                android:id="@+id/btRegisterSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="900dp"
                android:text="@string/txtSend"
                app:layout_constraintEnd_toEndOf="@+id/tvRegister"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tvRegister"
                app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>