<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhistleblowerForm3Fragment" >

    <Button
        android:id="@+id/btnNext7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtSend"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtViolationFactDetailsWhistleblower"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtTxtViolationFactDetailsWhistleblower"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtViolationFactDetailsWhistleblower" />

    <Button
        android:id="@+id/btnNext6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtPrevious"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtViolationFactDetailsWhistleblower"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtTxtViolationFactDetailsWhistleblower"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtViolationFactDetailsWhistleblower" />

    <EditText
        android:id="@+id/edtTxtViolationTimeWhistleblower"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txtViolationTime"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
        app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

    <EditText
        android:id="@+id/edtTxtViolationCarWhistleblower"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/txtViolationCar"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
        app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

    <EditText
        android:id="@+id/edtTxtViolationLocationWhistleblower"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="@string/txtViolationLocation"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
        app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

    <EditText
        android:id="@+id/edtTxtIntersectionWhistleblower"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:hint="@string/txtIntersection"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
        app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

    <EditText
        android:id="@+id/edtTxtLocationNoteWhistleblower"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="256dp"
        android:ems="10"
        android:hint="@string/txtLocationNote"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
        app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

    <EditText
        android:id="@+id/edtTxtViolationFactWhistleblower"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="316dp"
        android:ems="10"
        android:hint="@string/ViolationFact"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
        app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

    <EditText
        android:id="@+id/edtTxtViolationFactDetailsWhistleblower"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="372dp"
        android:ems="10"
        android:hint="@string/ViolationFactDetails"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
        app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

    <TextView
        android:id="@+id/tvWhistleblowerContent"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="72dp"
        android:text="@string/txtWhistleblowerContent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>