<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WhistleblowerFormFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.android_traffic.WhistleblowerFormViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvWhistleblowerContent"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="72dp"
                android:text="@string/txtWhistleblowerContent"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtTxtViolationTimeWhistleblower"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/txtViolationTime"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
                app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
                app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

            <EditText
                android:id="@+id/edtTxtViolationCarWhistleblower"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="76dp"
                android:ems="10"
                android:hint="@string/txtViolationCar"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
                app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
                app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

            <EditText
                android:id="@+id/edtTxtViolationLocationWhistleblower"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="136dp"
                android:ems="10"
                android:hint="@string/txtViolationLocation"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
                app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
                app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

            <EditText
                android:id="@+id/edtTxtIntersectionWhistleblower"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="196dp"
                android:ems="10"
                android:hint="@string/txtIntersection"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
                app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
                app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

            <EditText
                android:id="@+id/edtTxtLocationNoteWhistleblower"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="256dp"
                android:ems="10"
                android:hint="@string/txtLocationNote"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
                app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
                app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

            <EditText
                android:id="@+id/edtTxtViolationFactWhistleblower"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="316dp"
                android:ems="10"
                android:hint="@string/ViolationFact"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
                app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
                app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />

            <EditText
                android:id="@+id/edtTxtViolationFactDetailsWhistleblower"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="368dp"
                android:ems="10"
                android:hint="@string/ViolationFactDetails"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvWhistleblowerContent"
                app:layout_constraintStart_toStartOf="@+id/tvWhistleblowerContent"
                app:layout_constraintTop_toBottomOf="@+id/tvWhistleblowerContent" />


            <Button
                android:id="@+id/btnNext7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/txtSend"
                app:layout_constraintEnd_toEndOf="@+id/tvContentWhistleblower2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tvContentWhistleblower2"
                app:layout_constraintTop_toBottomOf="@+id/btnUploadDocWhistleblower2" />

            <Button
                android:id="@+id/btnNext6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/txtPrevious"
                app:layout_constraintEnd_toEndOf="@+id/tvContentWhistleblower2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvContentWhistleblower2"
                app:layout_constraintTop_toBottomOf="@+id/btnUploadDocWhistleblower2" />

            <TextView
                android:id="@+id/tvContentWhistleblower2"
                android:layout_width="235dp"
                android:layout_height="136dp"
                android:layout_marginTop="540dp"
                android:text="@string/txtContent"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/edtTxtViolationFactDetailsWhistleblower"
                app:layout_constraintStart_toStartOf="@+id/edtTxtViolationFactDetailsWhistleblower"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnUploadDocWhistleblower2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtUploadFile"
                app:layout_constraintEnd_toEndOf="@+id/tvContentWhistleblower2"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="@+id/tvContentWhistleblower2"
                app:layout_constraintTop_toBottomOf="@+id/tvContentWhistleblower2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>