<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.android_traffic.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink">

        <EditText
            android:id="@+id/edtTxtLoginUsername"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/txtUsername"
            android:text="@={viewModel.username}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/edtTxtLoginPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:text="@={viewModel.password}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/edtTxtLoginUsername"
            app:layout_constraintStart_toStartOf="@+id/edtTxtLoginUsername"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtLoginUsername" />

        <Button
            android:id="@+id/btnLoginLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/txtLogin"
            app:layout_constraintEnd_toEndOf="@+id/edtTxtLoginPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtTxtLoginPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtLoginPassword" />

        <Button
            android:id="@+id/btnLoginRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/txtRegister"
            app:layout_constraintEnd_toEndOf="@+id/edtTxtLoginPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edtTxtLoginPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtLoginPassword" />

        <TextView
            android:id="@+id/tvLoginForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txtForgetPassword"
            app:layout_constraintEnd_toEndOf="@+id/edtTxtLoginPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edtTxtLoginPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtLoginPassword" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:src="@drawable/logincarimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>